# python-modules-packaging

./: README.md  setup.py
a-project/: main.py  pyproject.toml  simple.py
a-project/utils/: __init__.py  add.py
test-project/: main.py
