
[build-system]
requires = ['setuptools>=42', 'wheel']

[project]
name = 'my-package'
version = '0.1.0'
description = 'A short description of your package'
authors = [
{ name = 'Your Name', email = 'your.email@example.com' }
]
dependencies = [
]

[tool.setuptools]
packages = ['utils'] # Replace with your actural package name

